# ukvm

./: Cargo.toml  README.md  build.rs  ubc.toml
client/: Cargo.toml
client/src/: args.rs  dbus.rs  lib.rs  main.rs  result.rs
server/: Cargo.toml  build.rs  org.ukvm.Control.conf  ukvm.service  ukvm.toml
server/src/: args.rs  buttons.rs  dbus.rs  hid.rs  http.rs  index.html  leds.rs  lib.rs  main.rs  result.rs  server.rs  video.rs
src/: addr.rs  args.rs  buttons.rs  dbus.rs  hid.rs  http.rs  leds.rs  lib.rs  main.rs  result.rs  server.rs
web/: .parcelrc  package.json  tsconfig.json
web/src/: app.svelte  index.html  index.ts  theme-dark.css  theme-light.css
web/src/api/: fake.ts  http.ts  types.ts
web/src/theme/: _common.scss
web/src/theme/dark/: _smui-theme.scss
web/src/theme/light/: _smui-theme.scss
