[package]
name = "ukvm-core"
description = "Micro main-board control service."
version = "0.1.0"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
readme = "README.md"
categories = []
keywords = ["main", "board", "control", "gpio", "bmc"]
homepage = "https://github.com/katyo/ubc"
repository = "https://github.com/katyo/ubc"
edition = "2021"

[workspace]
members = ["server"]

[dependencies.educe]
version = "0.4"

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.parse-display]
version = "0.8"

[dependencies.zbus]
version = "3"
default-features = false
features = ["tokio"]
optional = true

[dependencies.hidg-core]
version = "0.1"
features = ["serde"]
optional = true

[features]
default = ["http", "hid", "video"]
dbus = ["zbus"]
http = []
web = ["http"]
hid = ["hidg-core"]
video = []
