[package]
name = "ukvm-core"
description = "Micro network KVM core."
version = "0.1.0"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
readme = "README.md"
categories = []
keywords = ["kvm", "ipkvm", "bmc", "server", "control"]
homepage = "https://github.com/katyo/ukvm"
repository = "https://github.com/katyo/ukvm"
edition = "2021"

[workspace]
members = ["server"]
# "iced_ui"]

[workspace.dependencies]
thiserror = "1"
educe = "0.4"
slab = "0.4"
argp = "0.3"
futures-util = "0.3"
tokio = "1"
tokio-stream = "0.1"
serde_json = "1"
toml = "0.7"
parse-display = "0.8"
hidg-core = "0.2"

[workspace.dependencies.tracing]
version = "0.1"
features = ["max_level_trace", "release_max_level_info"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.tracing-journald]
version = "0.3"

[workspace.dependencies.ukvm-core]
path = "."
version = "0.1"

[workspace.dependencies.ukvm-server]
path = "server"
version = "0.1"

[workspace.dependencies.serde]
version = "1"
features = ["derive", "rc"]

[workspace.dependencies.postcard]
version = "1"
features = ["use-std"]

[workspace.dependencies.zbus]
version = "3"
default-features = false
features = ["tokio"]

[workspace.dependencies.warp]
version = "0.3"
default-features = false

[workspace.dependencies.gpiod]
package = "tokio-gpiod"
version = "0.3"

[workspace.dependencies.hidg]
package = "tokio-hidg"
version = "0.2"

[workspace.dependencies.linux-video]
package = "tokio-linux-video"
version = "0.1"

[dependencies]
educe.workspace = true
serde.workspace = true
parse-display.workspace = true

[dependencies.zbus]
workspace = true
default-features = false
features = ["tokio"]
optional = true

[dependencies.hidg-core]
workspace = true
features = ["serde"]
optional = true

[features]
default = ["dbus", "http", "tls", "hid", "video"]
dbus = ["zbus"]
http = []
tls = []
web = ["http"]
hid = ["hidg-core"]
video = []

[profile.release]
opt-level = "z"
#debug = "limited"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
#panic = "abort"
incremental = false
codegen-units = 1
