[package]
name = "ukvm"
description = "Micro network KVM server."
version = "0.1.0"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
readme = "README.md"
categories = []
keywords = ["kvm", "ipkvm", "bmc", "server", "control"]
homepage = "https://github.com/katyo/ukvm"
repository = "https://github.com/katyo/ukvm"
edition = "2021"

[dependencies]
educe.workspace = true
slab.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parse-display.workspace = true
clap.workspace = true
log.workspace = true
ukvm-core.workspace = true

[dependencies.postcard]
workspace = true
optional = true

[dependencies.lovely_env_logger]
workspace = true
optional = true

[dependencies.systemd-journal-logger]
workspace = true
optional = true

[dependencies.futures-util]
workspace = true
features = ["sink"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.tokio-stream]
workspace = true
features = ["net", "sync"]

[dependencies.zbus]
workspace = true
optional = true

[dependencies.warp]
workspace = true
features = ["websocket"]
optional = true

[dependencies.gpiod]
workspace = true
features = ["serde"]

[dependencies.hidg]
workspace = true
features = ["serde"]
optional = true

[dependencies.linux-video]
workspace = true
features = ["thread-safe", "serde"]
optional = true

[features]
default = ["postcard", "http", "tls", "dbus", "logs", "hid", "video"] #, "web"]
dbus = ["ukvm-core/dbus", "zbus"]
http = ["ukvm-core/http", "warp"]
comp = ["warp/compression"]
tls = ["warp/tls"]
logs = ["lovely_env_logger"]
logs2 = ["systemd-journal-logger"]
web = ["http"]
hid = ["ukvm-core/hid", "hidg"]
video = ["ukvm-core/video", "linux-video"]
