[package]
name = "ukvm"
description = "Micro network KVM server."
version = "0.1.0"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
readme = "README.md"
categories = []
keywords = ["kvm", "ipkvm", "bmc", "server", "control"]
homepage = "https://github.com/katyo/ukvm"
repository = "https://github.com/katyo/ukvm"
edition = "2021"

[dependencies]
thiserror.workspace = true
educe.workspace = true
slab.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parse-display.workspace = true
argp.workspace = true
tracing.workspace = true
ukvm-core.workspace = true

[dependencies.postcard]
workspace = true
optional = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[target.'cfg(unix)'.dependencies.tracing-journald]
workspace = true
optional = true

[dependencies.futures-util]
workspace = true
features = ["sink"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt", "signal"]

[dependencies.tokio-stream]
workspace = true
features = ["net", "sync"]

[dependencies.zbus]
workspace = true
optional = true

[dependencies.warp]
workspace = true
features = ["websocket"]
optional = true

[dependencies.gpiod]
workspace = true
features = ["serde"]

[dependencies.hidg]
workspace = true
features = ["serde"]
optional = true

[dependencies.linux-video]
workspace = true
features = ["thread-safe", "serde"]
optional = true

[features]
default = ["postcard", "http", "tls", "dbus", "stderr", "journal", "hid", "video"] #, "web"]
multi-thread = ["tokio/rt-multi-thread"]
dbus = ["ukvm-core/dbus", "zbus"]
http = ["ukvm-core/http", "warp"]
comp = ["warp/compression"]
tls = ["ukvm-core/tls", "warp/tls"]
stderr = ["tracing-subscriber"]
journal = ["tracing-subscriber", "tracing-journald"]
web = ["http"]
hid = ["ukvm-core/hid", "hidg"]
video = ["ukvm-core/video", "linux-video"]
